<resources>
    <string name="oasisgames_app_name">OasisGames SDK</string>
<string name="oasisgames_sdk_pcenter_notice_6">Customer Service Center</string>
<string name="oasisgames_sdk_customer_notice1">Solving</string>
<string name="oasisgames_sdk_customer_notice2">Closed</string>
<string name="oasisgames_sdk_common_more">More</string>
<string name="oasisgames_sdk_customer_notice3">Our customer service will answer your question soon</string>
<string name="oasisgames_sdk_customer_notice5">No information</string>
<string name="oasisgames_sdk_customer_notice6">Next</string>
<string name="oasisgames_sdk_customer_notice7">Close</string>
<string name="oasisgames_sdk_customer_notice4">Details</string>
<string name="oasisgames_sdk_customer_notice8">Question Type</string>
<string name="oasisgames_sdk_customer_notice9">Picture</string>
<string name="oasisgames_sdk_customer_notice11">Send</string>
<string name="oasisgames_sdk_customer_notice10">Local Pictures</string>
<string name="oasisgames_sdk_customer_notice12">Preview</string>
<string name="oasisgames_sdk_login_notice_addpersonalinfo">For the safety of your account, you\'d better complete your profile so that it will be more likely to get back your account in case you lost it.</string>
<string name="oasisgames_sdk_pcenter_notice_7">Account Data</string>
<string name="oasisgames_sdk_head_title_customer">Problem Record</string>
<string name="oasisgames_sdk_customer_notice13">Me</string>
<string name="oasisgames_sdk_customer_notice14">None Available</string>
<string name="oasisgames_sdk_login_forgetpw_text">I forgot my password</string>
<string name="oasisgames_sdk_head_title_register">Create an Oasis Games account</string>
<string name="oasisgames_sdk_login_hint_username">Please enter account name</string>
<string name="oasisgames_sdk_login_hint_password">Please enter password</string>
<string name="oasisgames_sdk_login_username_notice_error_length">Account name should be between 6 and 50 characters</string>
<string name="oasisgames_sdk_login_username_notice_error1">Pure numbers could not be used as account name</string>
<string name="oasisgames_sdk_login_password_notice_error2">"&amp;" or "#" should not be contained in passwords</string>
<string name="oasisgames_sdk_login_rule_notice2">User Agreement</string>
<string name="oasisgames_sdk_bind_btn_regist">Accept the agreement and Register</string>
<string name="oasisgames_sdk_bind_btn_userrule">Read User Agreement</string>
<string name="oasisgames_sdk_common_btn_sure">OK</string>
<string name="oasisgames_sdk_bind_success">Congratulations! You have successfully registered. You can use OASIS to login to games.</string>
<string name="oasisgames_sdk_login_result_1">Login Successful</string>
<string name="oasisgames_sdk_bind_togame">Continue</string>
<string name="oasisgames_sdk_head_title_changeuser">Switch Account</string>
<string name="oasisgames_sdk_login_notice_changeuser">Current character will be covered by account switching, please be aware of it.</string>
<string name="oasisgames_sdk_login_button_changeuser_suer">OK</string>
<string name="oasisgames_sdk_login_button_changeuser_toregist">Register</string>
<string name="oasisgames_sdk_login_notice_2">It will login to the account you switched to automatically next time. Please choose a login mode.</string>
<string name="oasisgames_sdk_head_title_changeuser_oas">Switch Oasis Games account</string>
<string name="oasisgames_sdk_login_button_registnewuser">Create a new account</string>
<string name="oasisgames_sdk_login_notice_autologin_fail">Login failed, please login again</string>
<string name="oasisgames_sdk_login_notice_autologin_fail_btn">Login Now</string>
<string name="oasisgames_sdk_pay_notice_no">Mobile payment service is not available in your region</string>
<string name="oasisgames_sdk_pay_notice_null">Please choose a package</string>
<string name="oasisgames_sdk_pay_btn">Pay Now</string>
<string name="oasisgames_sdk_scan_text1">Instructions</string>
<string name="oasisgames_sdk_scan_text2_1">Please open it in a PC browser</string>
<string name="oasisgames_sdk_scan_text2_2">Place the QR code inside the viewfinder rectangle to scan it</string>
<string name="oasisgames_sdk_scan_success">Successfully scanned. Please complete recharge on PC</string>
<string name="oasisgames_sdk_login_notice_autologin_exception">Network problem, please try again later</string>
<string name="oasisgames_sdk_login_notice_autologin_exception_btn">Retry Now</string>
<string name="oasisgames_sdk_login_notice_1">Welcome</string>
<string name="oasisgames_sdk_publickey_not_init">Public KEY hasn\'t been initialized yet</string>
<string name="oasisgames_sdk_paykey_not_init">Pay KEY hasn\'t been initialized yet</string>
<string name="oasisgames_sdk_login_btn_submit">Login</string>
<string name="oasisgames_sdk_bind_notice_connectto">Associate to </string>
<string name="oasisgames_sdk_login_username_text">Account Name</string>
<string name="oasisgames_sdk_login_username_text2">Email</string>
<string name="oasisgames_sdk_login_password_text">Password</string>
<string name="oasisgames_sdk_login_remenberpw_text">Remember Password</string>
<string name="oasisgames_sdk_login_userlist_dialog_content">Are you sure you want to delete the account？</string>
<string name="oasisgames_sdk_common_errorcode_negative_4">Incorrect account name or password</string>
<string name="oasisgames_sdk_login_result_3">Login failed</string>
<string name="oasisgames_sdk_login_error_value_3">This email has been registered. You can login directly</string>
<string name="oasisgames_sdk_login_error_value_1">Signature verification failed</string>
<string name="oasisgames_sdk_login_error_value_4">Unknown error</string>
<string name="oasisgames_sdk_login_repassword_text">Confirm password</string>
<string name="oasisgames_sdk_login_result_2">Registered successfully</string>
<string name="oasisgames_sdk_guide_notice4">Share</string>
<string name="oasisgames_sdk_login_result_4">You are using this account now</string>
<string name="oasisgames_sdk_bind_error_token_lose">Association failed! Unable to retrieve Token</string>
<string name="oasisgames_sdk_bind_error_value_1">Sign verification failed</string>
<string name="oasisgames_sdk_bind_error_value_4">Parameter could not be empty</string>
<string name="oasisgames_sdk_bind_error_value_3">Two accounts in the same server cannot be mutually associated </string>
<string name="oasisgames_sdk_common_errorcode_negative_999">Other error type</string>
<string name="oasisgames_sdk_share_btn_text">Share to Facebook</string>
<string name="oasisgames_sdk_share_content_hint">Share your mood</string>
<string name="oasisgames_sdk_share_success">Successfully shared</string>
<string name="oasisgames_sdk_share_fail">Failed to share</string>
<string name="oasisgames_sdk_share_cancled">Share operation cancelled</string>
<string name="oasisgames_sdk_exit_title">Warning</string>
<string name="oasisgames_sdk_error_exception">Error. Please retry later</string>
<string name="oasisgames_sdk_pay_notice2">Server ID:</string>
<string name="oasisgames_sdk_pay_btn_error1">Order failed, please retry later</string>
<string name="oasisgames_sdk_pay_error_success">Payment Successful</string>
<string name="oasisgames_sdk_pay_error_success2">Payment complete, please wait for confirmation</string>
<string name="oasisgames_sdk_pay_error_success_fail">Payment successful, but recharge failed</string>
<string name="oasisgames_sdk_pay_error_getinfos_fail">Unable to get package details</string>
<string name="oasisgames_sdk_pay_infobip_notice_1">SIM card required</string>
<string name="oasisgames_sdk_pay_infobip_notice_2">Your device should not be switched to Airplane Mode</string>
<string name="oasisgames_sdk_pay_infobip_notice_3">Your device must be connected to usable network</string>
<string name="oasisgames_sdk_pay_infobip_notice_4">Unable to recognize Mobile Country Code and Network Code</string>
<string name="oasisgames_sdk_pay_infobip_notice_5">No service with current API KEY</string>
<string name="oasisgames_sdk_pay_infobip_notice_6">Service with current API KEY has been banned</string>
<string name="oasisgames_sdk_pay_infobip_notice_7">Not available in your country</string>
<string name="oasisgames_sdk_pay_infobip_notice_8">Service unavailable</string>
<string name="oasisgames_sdk_pay_google_notice_3">Purchase failed</string>
<string name="oasisgames_sdk_pay_google_notice_4">Purchase not confirmed, please retry later</string>
<string name="oasisgames_sdk_pay_google_notice_alert_content">Recharge failed. Please try again or contact customer service</string>
<string name="oasisgames_sdk_pay_google_notice_alert_retry">Retry</string>
<string name="oasisgames_sdk_pay_google_notice_alert_close">Close</string>
<string name="oasisgames_sdk_common_btn_cancle">Cancel</string>
<string name="oasisgames_sdk_login_username_notice_error">Please enter valid email address</string>
<string name="oasisgames_sdk_login_username_notice_error2">English letters, numbers or \'_\', or use other common e-mail address only</string>
<string name="oasisgames_sdk_common_errorcode_negative_7">Account not exist</string>
<string name="oasisgames_sdk_common_errorcode_negative_6">Account already exists</string>
<string name="oasisgames_sdk_login_password_notice_error">Passwords must be between 6 and 20 characters.</string>
<string name="oasisgames_sdk_pay_error_fail">Payment failed</string>
<string name="oasisgames_sdk_login_notice_3">Please choose one of the following ways to log in the game</string>
<string name="oasisgames_sdk_login_notice_5">Register Now</string>
<string name="oasisgames_sdk_login_notice_6">For account security, you are recommended to create an Oasis Games account in case of unexpected loss</string>
<string name="oasisgames_sdk_head_title_charge">Recharge</string>
<string name="oasisgames_sdk_menu_notice_drag">Drag and drop operation available</string>
<string name="oasisgames_sdk_pay_notice_null2">Subscription plan info is not accessible at the moment. Please click Refresh or recharge on your PC</string>
<string name="oasisgames_sdk_menu_notice_relogin">Character information not accessible. Please log in again</string>
<string name="oasisgames_sdk_head_title_register_1">Register</string>
<string name="oasisgames_sdk_guide_notice5">Help</string>
<string name="oasisgames_sdk_guide_notice1">This registration will associate the character you are using with this account</string>
<string name="oasisgames_sdk_guide_notice2">You can associate the current character with this account</string>
<string name="oasisgames_sdk_guide_notice3">PC Recharge more favourable</string>
<string name="oasisgames_sdk_login_notice_7">Quit Game</string>
<string name="oasisgames_sdk_login_notice_8">Quit this game?</string>
<string name="oasisgames_sdk_common_errorcode_negative_13">Login on your device is suspended. Please contact customer service</string>
<string name="oasisgames_sdk_common_errorcode_negative_14">Your account is suspended. Please contact customer service</string>
<string name="oasisgames_sdk_login_accredit_notice_1">Authorizing...</string>
<string name="oasisgames_sdk_login_accredited_notice">The account you wish to authorize is different from the account you last logged in with. Please change accounts and log in again</string>
<string name="oasisgames_sdk_login_accredited_notice_1">Click on "Authorize" after you have changed accounts and logging in again.</string>
<string name="oasisgames_sdk_login_accredited_btn_1">Change  account</string>
<string name="oasisgames_sdk_login_accredited_btn_2">Authorize</string>
<string name="oasisgames_sdk_login_history_server_id">Server:</string>
<string name="oasisgames_sdk_login_history_role_level">Level:</string>
<string name="oasisgames_sdk_login_history_role_name">Char. name:</string>
<string name="oasisgames_sdk_common_imageview_disctiption">ImageView Description</string>
</resources>