<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
    android:gravity="center_vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_weight="3"
        android:orientation="horizontal" 
        android:paddingLeft="15dip"
        android:gravity="center_vertical|left">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oasisgames_sdk_login_history_server_id" 
            android:textColor="@color/oasisgames_sdk_color_font_666666"
            android:textSize="@dimen/oasisgames_sdk_button_dimen_textsize_16"/>

        <TextView
            android:id="@+id/oasisgames_sdk_login_role_server_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="3dp" 
            android:textColor="@color/oasisgames_sdk_color_font_666666"
            android:textSize="@dimen/oasisgames_sdk_button_dimen_textsize_16"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_weight="4"
        android:orientation="horizontal" 
        android:paddingLeft="15dip"
        android:gravity="center_vertical|left">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oasisgames_sdk_login_history_role_level" 
            android:textColor="@color/oasisgames_sdk_color_font_666666"
            android:textSize="@dimen/oasisgames_sdk_button_dimen_textsize_16"/>

        <TextView
            android:id="@+id/oasisgames_sdk_login_role_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="3dp" 
            android:textColor="@color/oasisgames_sdk_color_font_666666"
            android:textSize="@dimen/oasisgames_sdk_button_dimen_textsize_16"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_weight="3"
        android:orientation="horizontal" 
        android:paddingLeft="15dip"
        android:gravity="center_vertical|left">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oasisgames_sdk_login_history_role_name" 
            android:textColor="@color/oasisgames_sdk_color_font_666666"
            android:textSize="@dimen/oasisgames_sdk_button_dimen_textsize_16"/>

        <TextView
            android:id="@+id/oasisgames_sdk_login_role_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:paddingLeft="3dp" 
            android:textColor="@color/oasisgames_sdk_color_font_666666"
            android:textSize="@dimen/oasisgames_sdk_button_dimen_textsize_16"/>
    </LinearLayout>

</LinearLayout>